--- a/TaskLogSystem/Content/CustomStyle.css
+++ b/TaskLogSystem/Content/CustomStyle.css
@@ -1,211 +1,113 @@
-﻿
-.navbar {
-    position: relative;
-    display: flex;
-    padding: 10px;
-    background-color: #141214;
-    justify-content: space-between;
-    align-items: center;
-    padding: .7rem 10rem;
-    box-shadow: 7px 5px 15px -4px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 7px 5px 15px -4px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 7px 5px 15px -4px rgba(0, 0, 0, 0.75);
-    margin-bottom: 3rem;
+﻿@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+body {
+    font-family: 'Poppins', sans-serif;
 }
 
-.nav-items > ul > li {
-    position: relative;
-    display: inline;
-    list-style: none;
-    margin: 10px;
-    padding: 10px 20px;
+h3 {
+    font-size: 1.2375rem;
+    color: #FFF;
+}
+
+a {
     cursor: pointer;
-}
-
-    .nav-items > ul > li > a {
-        color: white;
-        text-decoration: none;
-    }
-
-    .nav-items > ul > li::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 0.17rem;
-        background-color: #c52726;
-        left: 0;
-        bottom: 0;
-        transform-origin: 0% 100%;
-        transform: scaleX(0);
-        transition: transform 0.3s ease;
-    }
-
-    .nav-items > ul > li:hover::after {
-        transform: scaleX(1);
-    }
-
-.nav-logo a,
-.nav-button a {
-    color: white;
-    list-style: none;
     text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+}
+
+li {
+    list-style: none;
+}
+
+/* Layout skeleton */
+
+.wrapper {
+    align-items: stretch;
     display: flex;
-}
-
-.nav-logo {
-    font-size: 32px;
-}
-
-.nav-button {
-    background-color: #c52726;
-    border-radius: 50px;
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.anim-layer {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 0;
-    height: 100%;
-    background-color: white;
-    transition: width 0.3s ease, left 0.3s ease;
-}
-
-.nav-button:hover .anim-layer {
     width: 100%;
-    left: 0;
 }
 
-.nav-button:hover a {
-    color: #141214;
+#sidebar {
+    max-width: 264px;
+    min-width: 264px;
+    transition: all 0.35s ease-in-out;
+    box-shadow: 0 0 35px 0 rgba(49, 57, 66, 0.5);
+    z-index: 1111;
+    background-color: black;
 }
 
-.nav-button a {
-    display: block;
-    padding: 10px 20px;
-    color: white;
-    text-decoration: none;
+    /* Sidebar collapse */
+
+    #sidebar.collapsed {
+        margin-left: -264px;
+    }
+
+.main {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    transition: all 0.35s ease-in-out;
+}
+
+.sidebar-logo {
+    padding: 1.15rem 1.5rem;
+}
+
+    .sidebar-logo a {
+        color: #e9ecef;
+        font-size: 1.25rem;
+        font-weight: 600;
+    }
+
+.sidebar-nav {
+    padding: 0;
+}
+
+.sidebar-header {
+    color: #e9ecef;
+    font-size: .75rem;
+    padding: 1.5rem 1.5rem .375rem;
+}
+
+a.sidebar-link {
+    padding: .625rem 1.625rem;
+    color: #e9ecef;
     position: relative;
-    z-index: 1;
+    display: block;
+    font-size: 1rem;
 }
 
-#hamburger-menu,
-#mobile-menu {
-    display: none;
+.sidebar-link[data-bs-toggle="collapse"]::after {
+    border: solid;
+    border-width: 0 .075rem .075rem 0;
+    content: "";
+    display: inline-block;
+    padding: 2px;
+    position: absolute;
+    right: 1.5rem;
+    top: 1.4rem;
+    transform: rotate(-135deg);
+    transition: all .2s ease-out;
 }
 
-@media only screen and (max-width: 770px) {
-    #mobile-menu {
-        background-color: #c52726;
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: none;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        transition: transform 0.3s ease;
-        transform: translateX(-100%);
-    }
+.sidebar-link[data-bs-toggle="collapse"].collapsed::after {
+    transform: rotate(45deg);
+    transition: all .2s ease-out;
+}
 
-    .mobile-nav-items > ul {
-        padding: 0px;
-    }
+.content {
+    flex: 1;
+    max-width: 100vw;
+    width: 100vw;
+}
 
-        .mobile-nav-items > ul > li {
-            text-align: center;
-            position: relative;
-            list-style: none;
-            margin: 10px;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
+/* Responsive */
 
-            .mobile-nav-items > ul > li > a {
-                color: white;
-                text-decoration: none;
-            }
-
-            .mobile-nav-items > ul > li::after {
-                content: "";
-                position: absolute;
-                width: 100%;
-                height: 0.17rem;
-                background-color: white;
-                left: 0;
-                bottom: 0;
-                transform-origin: 0% 100%;
-                transform: scaleX(0);
-                transition: transform 0.3s ease;
-            }
-
-            .mobile-nav-items > ul > li:hover::after {
-                transform: scaleX(1);
-            }
-
-    .mobile-nav-button {
-        background-color: #141214;
-        border-radius: 50px;
-        position: relative;
-        display: inline-block;
-        overflow: hidden;
-        cursor: pointer;
-    }
-
-        .mobile-nav-button .anim-layer {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            width: 0;
-            height: 100%;
-            background-color: white;
-            transition: width 0.3s ease, left 0.3s ease;
-        }
-
-        .mobile-nav-button:hover .anim-layer {
-            width: 100%;
-            left: 0;
-        }
-
-        .mobile-nav-button:hover a {
-            color: #141214;
-        }
-
-        .mobile-nav-button a {
-            display: block;
-            padding: 10px 20px;
-            color: white;
-            text-decoration: none;
-            position: relative;
-            z-index: 1;
-        }
-
-    .nav-items > ul,
-    .nav-button {
-        display: none;
-    }
-
-    #hamburger-cross {
-        display: block;
-        color: white;
-        cursor: pointer;
-        font-size: 40px;
-        position: absolute;
-        top: 20px;
-        right: 26px;
-    }
-
-    #hamburger-menu {
-        display: block;
-        color: white;
-        cursor: pointer;
-        font-size: 24px;
+@media (min-width:768px) {
+    .content {
+        width: auto;
     }
 }
 
@@ -227,4 +129,50 @@ thead th {
 
 .dataTables_filter {
     margin: 3rem auto;
+}
+
+/* Card Style*/
+.order-card {
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+}
+
+.bg-c-blue {
+    background: linear-gradient(45deg,#4099ff,#73b4ff);
+}
+
+.bg-c-green {
+    background: linear-gradient(45deg,#2ed8b6,#59e0c5);
+}
+
+.bg-c-yellow {
+    background: linear-gradient(45deg,#FFB64D,#ffcb80);
+}
+
+.bg-c-pink {
+    background: linear-gradient(45deg,#FF5370,#ff869a);
+}
+
+.card {
+    border-radius: 5px;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    border: none;
+    margin-bottom: 30px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    font-family: 'Poppins', sans-serif;
+}
+
+    .card .card-block {
+        padding: 25px;
+        font-family: 'Poppins', sans-serif;
+    }
+
+.f-left {
+    float: left;
+}
+
+.f-right {
+    float: right;
 }
