--- a/TaskLogSystem/Views/Shared/_Layout.cshtml
+++ b/TaskLogSystem/Views/Shared/_Layout.cshtml
@@ -13,6 +13,10 @@
 
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
+    <!-- Iconify -->
+    <script src="https://code.iconify.design/iconify-icon/2.0.0/iconify-icon.min.js"></script>
+
     @Styles.Render("~/Content/plugins")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/css")
@@ -25,8 +29,13 @@
 
     @*SweetAlert*@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
+    @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">*@
 </head>
 <body>
+
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
@@ -49,5 +58,17 @@
     @*<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>*@
 
     @RenderSection("scripts", required: false)
+
+    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>*@
+
+    <script>
+        if (document.querySelector(".btnToggleSidebar")) {
+            document.querySelector(".btnToggleSidebar").addEventListener("click", function () {
+                document.querySelector("#sidebar").classList.toggle("collapsed");
+            });
+        }
+    </script>
 </body>
 </html>
